# priests-engine

./: IMASM_MANUSCRIPT.md  IMASM_MANUSCRIPT_SECTION46.md  IMASM_MANUSCRIPT_SHAVIAN.md  PHYSICS_BIG_QUESTIONS.md  PRIESTS_ENGINE.md  PRIESTS_ENGINE.tex  README.md  belnap_shor.py  commit.txt  para_alignment.py  para_category.py  para_loop.py  para_multiagent.py  para_nreg.py  para_qm.py  para_qm_fix.py  para_qm_tools.py  para_repl.py  para_repl.py.bak  para_rh.py  para_temporal.py  para_vm.py  para_wasm.py  para_ym.py  pyproject.toml  quantum_on_classical_demo.py
figures/: cfg_execution.py  cfg_millennium.py  cfg_modules.py  cfg_paraasm.py  pe1.mmd  pe2.mmd  pe3.mmd  pe4.mmd  pe5.mmd  pe6.mmd  pe7.mmd  render_tikz.py
priests_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
programs/: cross_distance.imasm  dialetheic_cycle.asm  emerald-tablet-bootstrap.imasm  frob_loop.asm  ifix_stable.asm  linear_a_bootstrap.imasm  probe.asm  qm_evolution.asm  qm_measurement.asm  rohonc_bootstrap.imasm  shor_loop.asm  sic_povm.asm  voynich_bootstrap.imasm
