[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "priests-engine"
version = "0.1.0"
description = "Paraconsistent Universal Engine — ParaASM VM, assembler, and REPL"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
para-repl = "para_repl:repl"
para-loop = "para_loop:run"
para-wasm = "para_wasm:repl"
para-shor = "belnap_shor:main"
para-align = "para_alignment:main"

[tool.setuptools]
py-modules = ["para_vm", "para_repl", "para_loop", "para_wasm", "belnap_shor", "para_alignment"]
